--- a/gamezone/package.json
+++ b/gamezone/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "^2.4.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
-    "react-navigation-stack": "^2.3.11"
+    "react-navigation-stack": "^2.3.11",
+    "yup": "^0.28.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
